--- a/About.html
+++ b/About.html
@@ -18,6 +18,7 @@
             <a href="About.html" class="nav-item">About Us</a>
             <a href="gallery.html" class="nav-item">Gallery</a>
             <a href="Contact.html" class="nav-item">Contact</a>
+            <a href="Feedback.html" class="nav-item">Feedback</a>
         </div>
     </nav>
 
