--- a/gallery.html
+++ b/gallery.html
@@ -17,6 +17,7 @@
             <a href="about.html" class="nav-item">About Us</a>
             <a href="gallery.html" class="nav-item">Gallery</a>
             <a href="contact.html" class="nav-item">Contact</a>
+            <a href="Feedback.html" class="nav-item">Feedback</a>
         </div>
     </nav>
 
