--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img class="logo" src="img\il_fullxfull.1431687846_eagl.webp" alt="">
         </div>
         <div class="nav-left">
-            <a href="index.html" class="nav-item" class="active">Home</a>
+            <a href="index.html" class="nav-item">Home</a>
             <a href="menu.html" class="nav-item">Menu</a>
             <a href="About.html" class="nav-item">About Us</a>
             <a href="gallery.html" class="nav-item">Gallery</a>
