--- a/menu.html
+++ b/menu.html
@@ -13,7 +13,7 @@
         </div>
         <div class="nav-left">
             <a href="index.html" class="nav-item">Home</a>
-            <a href="menu.html" class="nav-item" class="active">Menu</a>
+            <a href="menu.html" class="nav-item">Menu</a>
             <a href="about.html" class="nav-item">About Us</a>
             <a href="gallery.html" class="nav-item">Gallery</a>
             <a href="contact.html" class="nav-item">Contact</a>
